# tinyusb-cpp

./: CMakeLists.txt  Doxyfile  README.md
doc/html/: _u_s_b_descriptor_8h_source.html  _u_s_b_midi_8h_source.html  annotated.html  class_u_s_b_base-members.html  class_u_s_b_base.html  class_u_s_b_configuration-members.html  class_u_s_b_configuration.html  class_u_s_b_configuration_descriptor_data-members.html  class_u_s_b_configuration_descriptor_data.html  class_u_s_b_device-members.html  class_u_s_b_device.html  class_u_s_b_endpoint-members.html  class_u_s_b_endpoint.html  class_u_s_b_interface-members.html  class_u_s_b_interface.html  class_u_s_b_midi-members.html  class_u_s_b_midi.html  class_u_s_b_strings-members.html  class_u_s_b_strings.html  class_vector-members.html  class_vector.html  classes.html  dir_5afa6a24c1f3c38247b49515457f5291.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  pages.html  tusb__config_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  USBDescriptor.h
src/midi/: USBMidi.h  usb_main.cpp
test/: CMakeLists.txt  USBTest.cxx
